<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">518785344925766</string>
    <string name="app_name">Kitchen Survival Guide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment"></string>
    <string name="perfil">Perfil</string>
    <string name="n_rec">Nome da Receita</string>
    <string name="tempo_de_preparo">Tempo de Preparo</string>
    <string name="porcoes">Porções</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="modo_de_preparo">Modo de Preparo</string>
    <string name="ver_receita">Ver Receita</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="nao">Não</string>
    <string name="verifica_conexao">Verifique sua conexão com a internet!</string>
    <string name="cafe">Café</string>
    <string name="refeicoes">Refeições</string>
    <string name="ok">OK</string>
    <string name="title_activity_perfil_edit">Restrições e Alergias</string>
    <string name="title_activity_list_t"></string>
    <string name="title_activity_perfil_user">Perfil</string>
    <string name="title_activity_pos_survival"></string>
    <string name="title_activity_final">Receita</string>
    <string name="title_activity_activiity_perfil"></string>
    <string name="title_activity_perfil_edicao"></string>
    <string name="title_activity_splash">Splash</string>
    <string name="hello_world">Hello world!</string>

</resources>
