<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:background="#FBEDA5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/txt_nome_receita"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/n_rec" />
	<ImageView 
	    android:id="@+id/img_receita"
        android:layout_marginTop="15dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/noimage"
	    />
	
	<TextView
        android:id="@+id/txt_ingredientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ingredientes" />
	<TextView
        android:id="@+id/txt_ingredientes_receita"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/n_rec" />
	<TextView
        android:id="@+id/txt_modo_de_preparo"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/modo_de_preparo" />
	
	<TextView
        android:id="@+id/txt_modo_de_preparo_receita"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/n_rec" />
	<TextView
        android:id="@+id/txt_tempo_de_preparo"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/tempo_de_preparo" />
	<TextView
        android:id="@+id/txt_qtd_de_porcoes"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/porcoes" />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

	    <ImageView
            android:id="@+id/star01"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cookie_star_icon"/>
        <ImageView
            android:id="@+id/star02"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cookie_star_icon"/>
        <ImageView
            android:id="@+id/star03"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cookie_star_icon"/>
        <ImageView
            android:id="@+id/star04"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cookie_star_icon" />
        <ImageView
            android:id="@+id/star05"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cookie_star_icon"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_compartilhar"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/compartilhar"/>
</LinearLayout>
</ScrollView>